20-netpol/ssrf-no-egress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ssrf-good
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preview
  namespace: ssrf-good
  labels:
    app: preview
spec:
  replicas: 1
  selector:
    matchLabels:
      app: preview
  template:
    metadata:
     labels:
       app: preview
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - image: connorg/ssrf:0.0.1
        name: preview
---
apiVersion: v1
kind: Service
metadata:
  name: ssrf
  namespace: ssrf-good
spec:
  selector:
    app: preview
  ports:
    - name: https
      protocol: TCP
      nodePort: 30002
      port: 30002
      targetPort: 8080
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: ssrf-good
spec:
  podSelector:
    matchLabels:
      app: preview
  policyTypes:
  - Egress
